--- a/src/app/system/planning-page/planning-page.component.html
+++ b/src/app/system/planning-page/planning-page.component.html
@@ -3,7 +3,9 @@
     Страница планирования <span class="sparkline bar"></span>
   </h3>
 </div>
-<section class="section">
+<section class="section" *ngIf="!isLoaded">Loading ....</section>
+
+<section class="section" *ngIf="isLoaded">
   <div class="row">
     <div class="col-md-12">
       <div class="card">
@@ -12,61 +14,26 @@
             <h3 class="title">Расходы</h3>
           </div>
           <h5 class="planning-expenses pull-right">
-            Общий остаток: <span class="text-success">78 999.21 Р</span>
+            Общий остаток: <span class="text-success">{{bill.value | number:'1.2'}} Р</span>
           </h5>
         </div>
         <div class="card-block">
-          <div class="row">
+
+          <div class="row" *ngFor="let c of categories">
             <div class="col-xs-6">
               <div class="n-progress">
-                <div class="progress-bar success" style="width: 30%;">
-                  <span>Название категории</span>
+                <div class="progress-bar {{getCatColorClass(c)}}" [ngStyle]="{width: getCatPercent(c)}">
+                  <span>{{c.name}}</span>
                 </div>
               </div>
             </div>
             <div class="col-xs-6">
               <p>
-                <span class="text-success">300.00</span>
+                <span class="text-{{getCatColorClass(c)}}">{{ getCategoryCost(c) | number:'1.2' }}</span>
                 из
-                <span class="text-primary">1000.00</span>
+                <span class="text-primary">{{ c.capacity | number:'1.2' }}</span>
                 |
-                осталось <span class="text-success">700.00</span> (руб.)
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-6">
-              <div class="n-progress">
-                <div class="progress-bar warning" style="width: 60%;">
-                  <span>Название категории</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-6">
-              <p>
-                <span class="text-warning">600.00</span>
-                из
-                <span class="text-primary">1000.00</span>
-                |
-                осталось <span class="text-success">400.00</span> (руб.)
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-xs-6">
-              <div class="n-progress">
-                <div class="progress-bar danger" style="width: 100%;">
-                  <span>Название категории</span>
-                </div>
-              </div>
-            </div>
-            <div class="col-xs-6">
-              <p>
-                <span class="text-danger">1200.00</span>
-                из
-                <span class="text-primary">1000.00</span>
-                |
-                осталось <span class="text-danger">-200.00</span> (руб.)
+                осталось <span class="text-{{getCatColorClass(c)}}">{{ c.capacity - getCategoryCost(c) | number:'1.2' }}</span> (руб.)
               </p>
             </div>
           </div>
