--- a/src/app/system/history-page/history-page.component.html
+++ b/src/app/system/history-page/history-page.component.html
@@ -15,7 +15,7 @@
 
   <wfm-history-events
     [categories]="categories"
-    [events]="events"
+    [events]="filteredEvents"
   ></wfm-history-events>
   <div *ngIf="isFilterVisible">
     <wfm-history-filter
