--- a/src/app/system/bill-page/bill-page.component.html
+++ b/src/app/system/bill-page/bill-page.component.html
@@ -13,7 +13,7 @@
     Loading ...
   </div>
   <div class="row" *ngIf="isLoaded">
-    <wfm-bill-card [bill]="bill" [currency]="currency"></wfm-bill-card>
-    <wfm-currency-card [currency]="currency"></wfm-currency-card>
+    <ls-bill-card [bill]="bill" [currency]="currency"></ls-bill-card>
+    <ls-currency-card [currency]="currency"></ls-currency-card>
   </div>
 </section>
