--- a/src/app/system/shared/components/header/header.component.html
+++ b/src/app/system/shared/components/header/header.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="header-block header-block-nav">
     <ul class="nav-profile">
-      <li class="profile dropdown" wfmDropdown>
+      <li class="profile dropdown" lsDropdown>
         <a class="nav-link dropdown-toggle" role="button">
           <span class="name">
               Здравствуйте, {{user.name}}
