--- a/src/app/system/history-page/history-events/history-events.component.html
+++ b/src/app/system/history-page/history-events/history-events.component.html
@@ -15,7 +15,7 @@
                 [(ngModel)]="searchValue"
               >
             </div>
-            <div class="btn-group" lsDropdown>
+            <div class="btn-group" wfmDropdown>
               <button type="button" class="btn btn-secondary dropdown-toggle ">
                 Параметр
               </button>
@@ -41,10 +41,10 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let e of events | lsFilter:searchValue:searchField; let idx = index">
+            <tr *ngFor="let e of events | wfmFilter:searchValue:searchField; let idx = index">
               <th scope="row">{{ idx + 1 }}</th>
               <td>{{ e.amount | number:'1.2' }}</td>
-              <td>{{ e.date | lsMoment:'DD.MM.YYYY HH:mm:ss' }}</td>
+              <td>{{ e.date | wfmMoment:'DD.MM.YYYY HH:mm:ss' }}</td>
               <td>{{ e.catName }}</td>
               <td>
                 <span [ngClass]="getEventClass(e)">
