--- a/src/app/system/records-page/records-page.component.html
+++ b/src/app/system/records-page/records-page.component.html
@@ -5,24 +5,24 @@
 </div>
 
 <section class="section text-center" *ngIf="!isLoaded">
-  Loading ...
+  <wfm-loader></wfm-loader>
 </section>
 
 <section class="section" *ngIf="isLoaded">
   <div class="row">
     <div class="col-md-6">
-      <ls-add-event [categories]="categories"></ls-add-event>
+      <wfm-add-event [categories]="categories"></wfm-add-event>
     </div>
     <div class="col-md-6">
-      <ls-add-category (onCategoryAdd)="newCategoryAdded($event)"></ls-add-category>
+      <wfm-add-category (onCategoryAdd)="newCategoryAdded($event)"></wfm-add-category>
     </div>
   </div>
   <div class="row">
     <div class="col-md-6">
-      <ls-edit-category
+      <wfm-edit-category
         [categories]="categories"
         (onCategoryEdit)="categoryWasEdited($event)"
-      ></ls-edit-category>
+      ></wfm-edit-category>
     </div>
   </div>
 </section>
