--- a/src/app/system/system.component.html
+++ b/src/app/system/system.component.html
@@ -1,7 +1,7 @@
 <div class="main-wrapper">
   <div class="app">
-    <ls-header></ls-header>
-    <ls-sidebar></ls-sidebar>
+    <wfm-header></wfm-header>
+    <wfm-sidebar></wfm-sidebar>
     <article class="content dashboard-page">
       <router-outlet></router-outlet>
     </article>
